# backend

./: .concourse.yml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Jenkinsfile  Makefile  README.md  Repository Contribution Guideline :.md  Repository Contribution guldeline :.md  conanfile.txt
cmake/: FindGRPC.cmake  FindJsonRpc.cmake  FindProtobuf.cmake  toolchain.cmake
conan/Protobuf/: conanfile.py
conan/agent/: conanfile.py
conan/aide/: conanfile.py
conan/cryptopp/: conanfile.py
conan/fifo_map/: conanfile.py
conan/fmt/: conanfile.py
conan/gRPC/: conanfile.py
conan/json/: conanfile.py
conan/libjson-rpc-cpp/: conanfile.py
conan/libmicrohttpd/: conanfile.py
concourse-secrets/: github-auth-client-id  github-auth-client-secret  host-key  host-key-pub  session-signing-key  worker-key  worker-key-pub
doc/: Doxyfile
src/: embedder.cpp  logging.cpp  logging.h  peer.cpp  peer.h  sync.cpp  syncaided.cpp  syncd.cpp  view.cpp  view.h
src/client/: client.cpp  client.h  options.cpp  options.h
src/common/: endpoint.cpp  endpoint.h  options.cpp  options.h  uri.cpp  uri.h
src/protos/: members.proto  miner.proto  miners.proto  peer.proto  peers.proto
src/rpc/: aide.cpp  aide.h  helper.cpp  helper.h  members.cpp  members.h  rpc.cpp  rpc.h
src/rpc/callers/: members.cpp  members.h  miners.cpp  miners.h  peers.cpp  peers.h
src/rpc/services/: members.cpp  members.h  miners.cpp  miners.h  peers.cpp  peers.h
src/server/: detect_ssl.h  detector.cpp  detector.h  frontend.cpp  frontend.h  handoff.cpp  handoff.h  helper.cpp  helper.h  http.cpp  http.h  listener.cpp  listener.h  miner.cpp  miner.h  options.cpp  options.h  peering.cpp  peering.h  queue.cpp  queue.h  response.cpp  response.h  router.h  server.cpp  server.h  session.cpp  session.h  ssl_stream.h  stream.h  upstream.cpp  upstream.h  websocket.cpp  websocket.h
src/server/web/: client.h  session.cpp  session.h
src/stubs/: aide.json
tests/: test_endpoint.cpp  test_frontend.cpp  test_peer.cpp  test_router.cpp  test_uri.cpp  test_view.cpp
